[gd_scene load_steps=4 format=3 uid="uid://ckmft57s7jbll"]

[ext_resource type="Script" path="res://scripts/attack_prota.gd" id="1_vi180"]
[ext_resource type="Texture2D" uid="uid://d3ugsh7xdqtx3" path="res://sprites/prota/SpriteAtaque.png" id="1_wfklc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mkrss"]
radius = 8.0

[node name="attack_prota" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_vi180")

[node name="SpriteAtaque" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, -3.8147e-06)
scale = Vector2(0.666667, 0.645833)
texture = ExtResource("1_wfklc")
hframes = 13
frame = 11
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mkrss")
metadata/_edit_lock_ = true

[node name="Fin" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Fin" to="." method="_on_fin_timeout"]
